# classic-computer-science-problems-py

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
app/: main.py
app/csp/: commands.py  constraints.py  map_coloring.py  zookeeper.py
app/genetic_algorithms/: algorithm.py  commands.py  individual.py  mvrp.py  utils.py
csp/: commands.py  constraints.py  map_coloring.py  zookeeper.py
datasets/: travelling_map.csv  treasure_map.csv
genetic_algorithms/: algorithm.py  commands.py  individual.py  mvrp.py  utils.py
notebooks/: a-star_path_finder.ipynb  csp_zookeeper.ipynb  fuzzy_logic.ipynb  travelling_knapsack.ipynb  travelling_salesman_with_knapsack.ipynb
test/csp/: test_map_coloring.py
tests/csp/: test_map_coloring.py  test_zookeeper.py
