[project]
name = ""
version = "1.0"
description = "Classic CS Problems in Python"
license = {text = "CC-BY-SA-4.0"}
readme = "README.md"
authors = [
    {name = "Bruno Oliveira", email = "bruno.ariev@gmail.com"},
]

requires-python = ">=3.10,<3.12"

dependencies = [
    "chess>=1.10.0",
    "pandas>=2.1.3",
    "numpy>=1.26.2",
    "scikit-fuzzy>=0.4.2",
    "matplotlib>=3.8.2",
    "networkx>=3.2.1",
    "click>=8.1.7",
    "rich>=13.7.0",
]

[tool.pdm.dev-dependencies]
dev = [
    "jupyterlab>=4.0.9",
    "ruff>=0.1.6",
    "pytest>=7.4.3",
]

[tool.ruff]
line-length = 100