[project]
name = "cspy"
version = "1.0"
description = "Classic CS Problems in Python"
license = {text = "CC-BY-SA-4.0"}
readme = "README.md"
authors = [
    {name = "Bruno Oliveira", email = "bruno.ariev@gmail.com"},
]

requires-python = ">=3.10,<3.13"

dependencies = [
    "click>=8.1.8,<9.0",
    "rich>=13.9.4,<14.0",
    "pandas>=2.2.3,<3.0",
    "numpy>=2.2.1,<3.0",
    "scikit-fuzzy>=0.5.0,<1.0",
    "scipy>=1.14.1,<2.0",
    "matplotlib>=3.10.0,<4.0",
    "networkx>=3.4.2,<4.0",
    "chess>=1.11.1,<2.0",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.3.4",
    "ruff>=0.8.4",
    "pytest>=8.3.4",
]

[tool.ruff]
line-length = 100
lint.select = ["F", "E", "W", "I001"]
