[build-system]
requires = [
    "hatchling>=1.26.3,<2.0",
]
build-backend = "hatchling.build"

[project]
name = "cspy"
version = "1.1"
description = "Classic CS Problems in Python"
readme = "README.md"
requires-python = ">=3.10,<3.13"

dependencies = [
    "typer>=0.15.1,<1.0",
    "rich>=13.9.4,<14.0",
    "pandas>=2.2.3,<3.0",
    "numpy>=2.2.1,<3.0",
    "scikit-fuzzy>=0.5.0,<1.0",
    "scipy>=1.14.1,<2.0",
    "matplotlib>=3.10.0,<4.0",
    "networkx>=3.4.2,<4.0",
    "chess>=1.11.1,<2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0,<7.0",
    "ruff>=0.8.4",
    "jupyterlab>=4.3.4",
]

[project.scripts]
cspy = "app.main:cli"

[tool.hatch.build.targets.wheel]
include = ["app/**"]

[tool.pytest.ini_options]
addopts = [
    "--cov=app/",
    "--cov-report=term",
    "--cov-report=xml",
]
testpaths = ["tests"]

[tool.coverage.run]
omit = ["app/main.py"]

[tool.coverage.report]
show_missing = true

[tool.ruff]
line-length = 100
lint.select = ["F", "E", "W", "I001"]
